correción de header y footer + icons en assets

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="top-header"> 
             <div class="mi-cuenta-container">
-                <img class="mi-cuenta" src="./assets/logo.png" alt="cuenta" href="https://google.com">
+                <img class="mi-cuenta" src="./assets/my-account-icon.png" alt="cuenta" href="https://google.com">
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="./assets/logo.png" alt="Logo">
