--- a/html/productos.html
+++ b/html/productos.html
@@ -4,18 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Estilos-->
     <link rel="stylesheet" href="../css/style.css">
+    <!--Tipografía-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="top-header">
-            <form action="../busqueda.php" method="post">
-                <input type="text" placeholder="Buscar">
-                <input type="submit" value="ir">
-            </form> 
-            <img class="logo" src="../assets/logo.png" alt="Logo">
-            <h1 class="heading">PRUEBAS</h1>
-            <img class="mi-cuenta" src="../assets/logo.png" alt="cuenta" href="https://google.com">
+        <div class="top-header"> 
+            <div class="mi-cuenta-container">
+                <img class="mi-cuenta" src="../assets/logo.png" alt="cuenta" href="https://google.com">
+            </div>
+            <div class="nombre-empresa">
+                <img class="logo" src="../assets/logo.png" alt="Logo">
+                <h1 class="heading">PRUEBAS</h1>
+            </div>
+            <nav class="navbar-1 bg-body-tertiary bg-clr">
+                <div class="container-fluid navbar">
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-dark" type="submit">Search</button>
+                  </form>
+                </div>
+            </nav>
         </div>
         <nav class="nav-container">
            <a href="../index.html">Inicio</a>
@@ -28,12 +43,27 @@
     </header>
 
     <main>
-        <section class="carrusel-container">
-            <ul class="carrusel">
-                <li><img src="../assets/difusor1.jpg" alt="Imagen"></li>
-            </ul>
-            
-        </section>
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../assets/difusor1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/difusor1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/difusor1.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <section class="products">
             <nav class="filtros-container">
                 <ul class="filtros">
@@ -113,22 +143,24 @@
             <input type="submit" value="Aceptar">
         </div>
         <section class="main-footer">  
-            <aside class="left-content">
+            <div class="left-content">
                 <a href="https://google.com">Preguntas frecuentes</a>
                 <a href="https://google.com">Términos y condiciones</a>
                 <a href="https://google.com">Política de privacidad</a>
                 <a href="https://google.com">Sugerencias</a>
-            </aside>
+            </div>
             <h4 class="heading">Prueba</h4>
-            <aside class="right-content">
+            <div class="right-content">
                 <p>Mail</p>
                 <p>Contacto</p>
                 <p>Whatsapp</p>
-            </aside>
+            </div>
         </section>
         <div>
             <a href="https://google.com">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, vitae non sint quisquam cupiditate minus, quibusdam, ipsam expedita eveniet asperiores earum? Atque, ipsam quis. Voluptatum provident porro optio cumque minus?</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
