media queries para todo

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -17,7 +17,7 @@
     <header>
         <div class="top-header"> 
             <div class="mi-cuenta-container">
-                <img class="mi-cuenta" src="../assets/logo.png" alt="cuenta" href="https://google.com">
+                <img class="mi-cuenta" src="../assets/my-account-icon.png" alt="cuenta" href="https://google.com">
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="../assets/logo.png" alt="Logo">
@@ -30,6 +30,11 @@
                     <button class="btn btn-outline-dark" type="submit">Search</button>
                   </form>
                 </div>
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                      <img src="../assets/shearch-icon.png" alt="Bootstrap" width="30" height="24">
+                    </a>
+                  </div>
             </nav>
         </div>
         <nav class="nav-container">
@@ -42,37 +47,43 @@
         </nav>
     </header>
 
-
         <main>
-            <h1 class="heading">Nos caracterizamos por nuestro servicio de eventos</h1>
+            <div class="center-h">
+                <h2 class="heading">Nos caracterizamos por nuestro servicio de eventos</h2>
+            </div>
             <section class="explain-container">
-                <img src="../assets/logo.png" alt="imagen">
+                <div class="img-container">
+                    <img src="../assets/logo.png" alt="imagen">
+                </div>
                 <div class="explain-content">
                     <h2>¿Has tenido espacios vacios en tus decoraciones?</h2>
-                    <p class="exp">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem eius tempora accusamus tenetur distinctio labore ut, dolor facere voluptatem rem sit blanditiis fugit ullam eveniet ipsa corporis, quae id voluptatibus.</p>
+                    <p class="exp">No te preocupes, a todos nos ha pasado. Por eso Aromia cuenta con un servicio especializado en el cual podemos ayudarte a solucionar este problema. Más abajo encontrarás nuestro contacto, envíanos un mensaje y podremos asesorarte con tus dudas para que puedas decorar con nuestros productos tus eventos</p>
                 </div>
             </section>
             <h3 class="heading">Tipos de eventos</h3>
+            <div class="event-exp">
+                <p>Acá hay unos ejemplos de los eventos que solemos decorar en los cuales nos hemos especializado</p>
+            </div>
             <section class="events-container">
                 <div class="event">
-                    <img class="event-img" src="../assets/logo.png" alt="icon">
-                    <p>textito</p>
+                    <img class="event-img" src="../assets/wedding-icon.png" alt="icon">
+                    <p>Casamientos o Bodas</p>
                 </div>
                 <div class="event">
-                    <img class="event-img" src="../assets/logo.png" alt="icon">
-                    <p>textito</p>
+                    <img class="event-img" src="../assets/baby-shower-icon.png" alt="icon">
+                    <p>Baby Shower</p>
                 </div>
                 <div class="event">
-                    <img class="event-img" src="../assets/logo.png" alt="icon">
-                    <p>textito</p>
+                    <img class="event-img" src="../assets/meeting-icon.png" alt="icon">
+                    <p>Reuniones informales o formales</p>
                 </div>
                 <div class="event">
-                    <img class="event-img" src="../assets/logo.png" alt="icon">
-                    <p>textito</p>
+                    <img class="event-img" src="../assets/birthday-icon.png" alt="icon">
+                    <p>Cumpleaños</p>
                 </div>
             </section>
             <div class="text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A soluta possimus, doloremque accusantium dolorum delectus necessitatibus perferendis dolore voluptate incidunt nesciunt eos quam nulla? Doloribus aliquam omnis ea consequatur quae.</p>
+                <p>No dudes en preguntar. Haremos todo lo posible por que tú estés más relajado al decorar tus eventos y también haremos que tus invitados se sientan cómodos en tu evento</p>
             </div>
         </main>
         
