--- a/html/productos.html
+++ b/html/productos.html
@@ -17,7 +17,7 @@
     <header>
         <div class="top-header"> 
             <div class="mi-cuenta-container">
-                <img class="mi-cuenta" src="../assets/logo.png" alt="cuenta" href="https://google.com">
+                <img class="mi-cuenta" src="../assets/my-account-icon.png" alt="cuenta" href="https://google.com">
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="../assets/logo.png" alt="Logo">
@@ -30,6 +30,11 @@
                     <button class="btn btn-outline-dark" type="submit">Search</button>
                   </form>
                 </div>
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                      <img src="../assets/shearch-icon.png" alt="Bootstrap" width="30" height="24">
+                    </a>
+                  </div>
             </nav>
         </div>
         <nav class="nav-container">
@@ -42,7 +47,9 @@
         </nav>
     </header>
 
+
     <main>
+       
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -66,12 +73,29 @@
           </div>
         <section class="products">
             <nav class="filtros-container">
+                <nav class="navbar navbar-expand bg-body-tertiary" >
+                    <div class="container-fluid">
+                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Filtros
+                            </a>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">Filtrar por a</a></li>
+                              <li><a class="dropdown-item" href="#">Filtrar por b</a></li>
+                              <li><a class="dropdown-item" href="#">Filtrar por c</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
                 <ul class="filtros">
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
+                    <p class="heading">Filtros</p>
+                    <li><a class="dropdown-item" href="#">Filtrar por a</a></li>
+                    <li><a class="dropdown-item" href="#">Filtrar por b</a></li>
+                    <li><a class="dropdown-item" href="#">Filtrar por c</a></li>
                 </ul>
             </nav>
             <aside class="catalogo-container">
