--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     <button class="btn btn-outline-dark" type="submit">Search</button>
                   </form>
                 </div>
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                      <img src="./assets/shearch-icon.png" alt="Bootstrap" width="30" height="24">
+                    </a>
+                  </div>
             </nav>
         </div>
         <nav class="nav-container">
@@ -43,30 +48,33 @@
     </header>
 
     <main>
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/difusor1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-container">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./assets/difusor1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/difusor1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/difusor1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
-              <div class="carousel-item">
-                <img src="./assets/difusor1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/difusor1.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-        <h2 class="heading">Envíos a todo el país</h2>
-
+        </div>
+        <div class="heading-alternative">
+            <img src="./assets/send-icon.png" alt="ícono de envíos">
+            <h2 class="heading">Envíos a todo el país</h2>
+        </div>
         <section class="nav-alternative-container">
            <div class="nav-alternative">
                 <a href=""> <img src="./assets/logo.png" alt=""></a>
