--- a/html/eventos.html
+++ b/html/eventos.html
@@ -41,9 +41,9 @@
            <a href="../index.html">Inicio</a>
            <a href="../html/productos.html">Productos</a>
            <a href="../html/eventos.html">Eventos</a>
-           <a href="">4</a>
-           <a href="">5</a>
-           <a href="">6</a>
+           <a href="../index.html">4</a>
+           <a href="../index.html">5</a>
+           <a href="../index.html">6</a>
         </nav>
     </header>
 
@@ -86,11 +86,9 @@
                 <p>No dudes en preguntar. Haremos todo lo posible por que tú estés más relajado al decorar tus eventos y también haremos que tus invitados se sientan cómodos en tu evento</p>
             </div>
         </main>
-        
-
         <footer>
             <div class="call-to-action">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur inventore obcaecati</p>
+                <p>¡Escribí tu email para no perderte de ninguna de nuestras novedades!</p>
                 <form action="./email.php"></form>
                 <input type="text" placeholder="Email">
                 <input type="submit" value="Aceptar">
@@ -104,13 +102,13 @@
                 </div>
                 <h4 class="heading">Prueba</h4>
                 <div class="right-content">
-                    <p>Mail</p>
-                    <p>Contacto</p>
-                    <p>Whatsapp</p>
+                    <p>bauticatena@gmail.com</p>
+                    <p>11111111111</p>
+                    <p>22222222222</p>
                 </div>
             </section>
             <div>
-                <a href="https://google.com">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, vitae non sint quisquam cupiditate minus, quibusdam, ipsam expedita eveniet asperiores earum? Atque, ipsam quis. Voluptatum provident porro optio cumque minus?</a>
+                <a href="https://google.com">Política de derecho. Todos los derechos reservados</a>
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
