--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>test</title>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <!--Estilos-->
     <link rel="stylesheet" href="./css/style.css">
-
+    <!--Tipografía-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
@@ -41,12 +41,11 @@
            <a href="./index.html">Inicio</a>
            <a href="./html/productos.html">Productos</a>
            <a href="./html/eventos.html">Eventos</a>
-           <a href="">4</a>
-           <a href="">5</a>
-           <a href="">6</a>
+           <a href="./index.html">4</a>
+           <a href="./index.html">5</a>
+           <a href="./index.html">6</a>
         </nav>
     </header>
-
     <main>
         <div class="carousel-container">
             <div id="carouselExample" class="carousel slide">
@@ -77,22 +76,22 @@
         </div>
         <section class="nav-alternative-container">
            <div class="nav-alternative">
-                <a href=""> <img src="./assets/logo.png" alt=""></a>
+                <a href="./html/eventos.html"> <img src="./assets/logo.png" alt="Eventos"></a>
             </div>
             <div class="nav-alternative">
-                <a href=""> <img src="./assets/logo.png" alt=""></a>
+                <a href="./html/productos.html"> <img src="./assets/logo.png" alt="Productos"></a>
             </div>
             <div class="nav-alternative">
-                <a href=""> <img src="./assets/logo.png" alt=""></a>
+                <a href="./index.html"> <img src="./assets/logo.png" alt="Inicio"></a>
             </div>
             <div class="nav-alternative">
-                <a href=""> <img src="./assets/logo.png" alt=""></a>
+                <a href="./index.html"> <img src="./assets/logo.png" alt="4"></a>
             </div>
             <div class="nav-alternative">
-                <a href=""> <img src="./assets/logo.png" alt=""></a>
+                <a href="./index.html"> <img src="./assets/logo.png" alt="5"></a>
             </div>
             <div class="nav-alternative">
-                <a href=""> <img src="./assets/logo.png" alt=""></a>
+                <a href="./index.html"> <img src="./assets/logo.png" alt="6"></a>
             </div>
         </section>
             <h3 class="heading">Top Seller</h3>
@@ -116,14 +115,10 @@
         <div class="d-flex justify-content-center">
             <button class="btn btn-primary btn-lg " type="submit">Instagram</button>
         </div>
-        
     </main>
-
-
-
     <footer>
         <div class="call-to-action">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur inventore obcaecati</p>
+            <p>¡Escribí tu email para no perderte de ninguna de nuestras novedades!</p>
             <form action="./email.php"></form>
             <input type="text" placeholder="Email">
             <input type="submit" value="Aceptar">
@@ -137,13 +132,13 @@
             </div>
             <h4 class="heading">Prueba</h4>
             <div class="right-content">
-                <p>Mail</p>
-                <p>Contacto</p>
-                <p>Whatsapp</p>
+                <p>bauticatena@gmail.com</p>
+                <p>11111111111</p>
+                <p>22222222222</p>
             </div>
         </section>
         <div>
-            <a href="https://google.com">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, vitae non sint quisquam cupiditate minus, quibusdam, ipsam expedita eveniet asperiores earum? Atque, ipsam quis. Voluptatum provident porro optio cumque minus?</a>
+            <a href="https://google.com">Política de derecho. Todos los derechos reservados</a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
