--- a/html/productos.html
+++ b/html/productos.html
@@ -21,7 +21,7 @@
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="../assets/logo.png" alt="Logo">
-                <h1 class="heading">PRUEBAS</h1>
+                <h1 class="heading">Aromia</h1>
             </div>
             <nav class="navbar-1 bg-body-tertiary bg-clr">
                 <div class="container-fluid navbar">
@@ -168,7 +168,7 @@
                 <a href="https://google.com">Política de privacidad</a>
                 <a href="https://google.com">Sugerencias</a>
             </div>
-            <h4 class="heading">Prueba</h4>
+            <h4 class="heading">Aromia</h4>
             <div class="right-content">
               <p>bauticatena@gmail.com</p>
               <p>11111111111</p>
