--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="./assets/logo.png" alt="Logo">
-                <h1 class="heading">PRUEBAS</h1>
+                <h1 class="heading">Aromia</h1>
             </div>
             <nav class="navbar-1 bg-body-tertiary bg-clr">
                 <div class="container-fluid navbar">
@@ -76,22 +76,22 @@
         </div>
         <section class="nav-alternative-container">
            <div class="nav-alternative">
-                <a href="./html/eventos.html"> <img src="./assets/logo.png" alt="Eventos"></a>
+                <a href="./html/eventos.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Eventos"></a>
             </div>
             <div class="nav-alternative">
-                <a href="./html/productos.html"> <img src="./assets/logo.png" alt="Productos"></a>
+                <a href="./html/productos.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Productos"></a>
             </div>
             <div class="nav-alternative">
-                <a href="./index.html"> <img src="./assets/logo.png" alt="Inicio"></a>
+                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Inicio"></a>
             </div>
             <div class="nav-alternative">
-                <a href="./index.html"> <img src="./assets/logo.png" alt="4"></a>
+                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="4"></a>
             </div>
             <div class="nav-alternative">
-                <a href="./index.html"> <img src="./assets/logo.png" alt="5"></a>
+                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="5"></a>
             </div>
             <div class="nav-alternative">
-                <a href="./index.html"> <img src="./assets/logo.png" alt="6"></a>
+                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="6"></a>
             </div>
         </section>
             <h3 class="heading">Top Seller</h3>
@@ -130,7 +130,7 @@
                 <a href="https://google.com">Política de privacidad</a>
                 <a href="https://google.com">Sugerencias</a>
             </div>
-            <h4 class="heading">Prueba</h4>
+            <h4 class="heading">Aromia</h4>
             <div class="right-content">
                 <p>bauticatena@gmail.com</p>
                 <p>11111111111</p>
