--- a/html/eventos.html
+++ b/html/eventos.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <!--Aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
     <header>
@@ -41,16 +44,11 @@
            <a href="../index.html">Inicio</a>
            <a href="../html/productos.html">Productos</a>
            <a href="../html/eventos.html">Eventos</a>
-           <a href="../index.html">4</a>
-           <a href="../index.html">5</a>
-           <a href="../index.html">6</a>
         </nav>
     </header>
 
         <main>
-            <div class="center-h">
-                <h2 class="heading">Nos caracterizamos por nuestro servicio de eventos</h2>
-            </div>
+            <h2 class="heading">Nos caracterizamos por nuestro servicio de eventos</h2>
                 <section class="explain-container">
                     <div class="img-container">
                         <img src="../assets/logo.png" alt="imagen">
@@ -64,7 +62,7 @@
                 <div class="event-exp">
                 <p>Acá hay unos ejemplos de los eventos que solemos decorar en los cuales nos hemos especializado</p>
             </div>
-            <section class="events-container">
+            <section data-aos="fade-up" class="events-container">
                 <div class="event">
                     <img class="event-img" src="../assets/wedding-icon.png" alt="icon">
                     <p>Casamientos o Bodas</p>
@@ -111,6 +109,9 @@
                 <a href="https://google.com">Política de derecho. Todos los derechos reservados</a>
             </div>
         </footer>
+        <script>
+            AOS.init();
+          </script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
