--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
            <a href="./index.html">Inicio</a>
            <a href="./html/productos.html">Productos</a>
            <a href="./html/eventos.html">Eventos</a>
-           <a href="./index.html">4</a>
-           <a href="./index.html">5</a>
-           <a href="./index.html">6</a>
         </nav>
     </header>
     <main>
@@ -76,22 +73,13 @@
         </div>
         <section class="nav-alternative-container">
            <div class="nav-alternative">
-                <a href="./html/eventos.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Eventos"></a>
+                <a class="nav-alternative-a" href="./html/eventos.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Eventos"></a>
             </div>
             <div class="nav-alternative">
-                <a href="./html/productos.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Productos"></a>
+                <a class="nav-alternative-a" href="./html/productos.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Productos"></a>
             </div>
             <div class="nav-alternative">
-                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Inicio"></a>
-            </div>
-            <div class="nav-alternative">
-                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="4"></a>
-            </div>
-            <div class="nav-alternative">
-                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="5"></a>
-            </div>
-            <div class="nav-alternative">
-                <a href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="6"></a>
+                <a class="nav-alternative-a" href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Inicio"></a>
             </div>
         </section>
             <h3 class="heading">Top Seller</h3>
