corección de detalles de preeentrega

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -24,7 +24,7 @@
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="../assets/logo.png" alt="Logo">
-                <h1 class="heading">Aromia</h1>
+                <p class="heading">Aromia</p>
             </div>
             <nav class="navbar-1 bg-body-tertiary bg-clr">
                 <div class="container-fluid navbar">
@@ -42,13 +42,13 @@
         </div>
         <nav class="nav-container">
            <a href="../index.html">Inicio</a>
-           <a href="../html/productos.html">Productos</a>
-           <a href="../html/eventos.html">Eventos</a>
+           <a href="./productos.html">Productos</a>
+           <a href="./eventos.html">Eventos</a>
         </nav>
     </header>
 
         <main>
-            <h2 class="heading">Nos caracterizamos por nuestro servicio de eventos</h2>
+            <h1 class="heading-1">Nos caracterizamos por nuestro servicio de eventos</h1>
                 <section class="explain-container">
                     <div class="img-container">
                         <img src="../assets/logo.png" alt="imagen">
@@ -58,7 +58,7 @@
                         <p class="exp">No te preocupes, a todos nos ha pasado. Por eso Aromia cuenta con un servicio especializado en el cual podemos ayudarte a solucionar este problema. Más abajo encontrarás nuestro contacto, envíanos un mensaje y podremos asesorarte con tus dudas para que puedas decorar con nuestros productos tus eventos</p>
                     </div>
                 </section>
-                <h3 class="heading">Tipos de eventos</h3>
+                <h2 class="heading">Tipos de eventos</h2>
                 <div class="event-exp">
                 <p>Acá hay unos ejemplos de los eventos que solemos decorar en los cuales nos hemos especializado</p>
             </div>
@@ -98,7 +98,7 @@
                     <a href="https://google.com">Política de privacidad</a>
                     <a href="https://google.com">Sugerencias</a>
                 </div>
-                <h4 class="heading">Aromia</h4>
+                <p class="heading">Aromia</p>
                 <div class="right-content">
                     <p>bauticatena@gmail.com</p>
                     <p>11111111111</p>
