--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="./assets/logo.png" alt="Logo">
-                <h1 class="heading">Aromia</h1>
+                <p class="heading">Aromia</p>
             </div>
             <nav class="navbar-1 bg-body-tertiary bg-clr">
                 <div class="container-fluid navbar">
@@ -69,7 +69,7 @@
         </div>
         <div class="heading-alternative">
             <img src="./assets/send-icon.png" alt="ícono de envíos">
-            <h2 class="heading">Envíos a todo el país</h2>
+            <h1 class="heading">Envíos a todo el país</h1>
         </div>
         <section class="nav-alternative-container">
            <div class="nav-alternative">
@@ -82,7 +82,7 @@
                 <a class="nav-alternative-a" href="./index.html"> <img class="nav-alternative-img"src="./assets/logo.png" alt="Inicio"></a>
             </div>
         </section>
-            <h3 class="heading">Top Seller</h3>
+            <p class="heading">Top Seller</p>
         <section class="trending">
             <div class="product-container">
                 <img class="product-image" src="assets/difusor1.jpg" alt="asas">
@@ -118,7 +118,7 @@
                 <a href="https://google.com">Política de privacidad</a>
                 <a href="https://google.com">Sugerencias</a>
             </div>
-            <h4 class="heading">Aromia</h4>
+            <p class="heading">Aromia</p>
             <div class="right-content">
                 <p>bauticatena@gmail.com</p>
                 <p>11111111111</p>
