--- a/html/productos.html
+++ b/html/productos.html
@@ -21,7 +21,7 @@
             </div>
             <div class="nombre-empresa">
                 <img class="logo" src="../assets/logo.png" alt="Logo">
-                <h1 class="heading">Aromia</h1>
+                <p class="heading">Aromia</p>
             </div>
             <nav class="navbar-1 bg-body-tertiary bg-clr">
                 <div class="container-fluid navbar">
@@ -39,8 +39,8 @@
         </div>
         <nav class="nav-container">
            <a href="../index.html">Inicio</a>
-           <a href="../html/productos.html">Productos</a>
-           <a href="../html/eventos.html">Eventos</a>
+           <a href="./productos.html">Productos</a>
+           <a href="./eventos.html">Eventos</a>
         </nav>
     </header>
     <main> 
@@ -65,6 +65,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <h1 class="heading">Nuestros Productos</h1>
         <section class="products">
             <nav class="filtros-container">
                 <nav class="navbar navbar-expand bg-body-tertiary" >
@@ -86,7 +87,7 @@
                     </div>
                 </nav>
                 <ul class="filtros">
-                    <p class="heading">Filtros</p>
+                    <p>Filtros</p>
                     <li><a class="dropdown-item" href="#">Filtrar por a</a></li>
                     <li><a class="dropdown-item" href="#">Filtrar por b</a></li>
                     <li><a class="dropdown-item" href="#">Filtrar por c</a></li>
@@ -165,7 +166,7 @@
                 <a href="https://google.com">Política de privacidad</a>
                 <a href="https://google.com">Sugerencias</a>
             </div>
-            <h4 class="heading">Aromia</h4>
+            <p class="heading">Aromia</p>
             <div class="right-content">
               <p>bauticatena@gmail.com</p>
               <p>11111111111</p>
