addes assets and fixed mq problem

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -51,7 +51,7 @@
             <h1 class="heading-1">Nos caracterizamos por nuestro servicio de eventos</h1>
                 <section class="explain-container">
                     <div class="img-container">
-                        <img src="../assets/logo.png" alt="imagen">
+                        <img src="../assets/image-event-exp.jpg" alt="imagen">
                     </div>
                     <div class="explain-content">
                         <h2>¿Has tenido espacios vacios en tus decoraciones?</h2>
