--- a/html/productos.html
+++ b/html/productos.html
@@ -45,17 +45,17 @@
     </header>
     <main> 
         <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../assets/difusor1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../assets/difusor1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../assets/difusor1.jpg" class="d-block w-100" alt="...">
-              </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../assets/carousel-image-1.png" class="d-block w-100" alt="nueva línea ambar">
             </div>
+            <div class="carousel-item">
+              <img src="../assets/carousel-image-2.png" class="d-block w-100" alt="envío gratis en compras de más de 40 000 pesos">
+            </div>
+            <div class="carousel-item">
+              <img src="../assets/carousel-image-3.png" class="d-block w-100" alt="50% de descuento en la segunda unidad en las velas de la línea BlackStyle">
+            </div>
+          </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
@@ -94,59 +94,29 @@
                 </ul>
             </nav>
             <aside class="catalogo-container">
+              <div class="product-container">
+                <img class="product-image" src="../assets/image-product-a.jpg" alt="asas">
+                <p class="product-text">Kit difusor de varillas</p>
+                <a class="product-link" href="https://google.com">Compra</a>
+            </div>
+            <div class="product-container">
+                <img class="product-image" src="../assets/image-product-b.jpg" alt="asas">
+                <p class="product-text">Vela de soja en lata premium</p>
+                <a class="product-link" href="https://google.com">Compra</a>
+            </div>
+            <div class="product-container">
+                <img class="product-image" src="../assets/image-product-c.jpg" alt="asas">
+                <p class="product-text">Vela de soja línea Ambar</p>
+                <a class="product-link" href="https://google.com">Compra</a>
+            </div>
                 <div class="product-container">
                     <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
+                    <p class="product-text">HomeSpay edición Smoke</p>
                     <a class="product-link" href="https://google.com">Compra</a>
                 </div>
                 <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
-                    <a class="product-link" href="https://google.com">Compra</a>
-                </div>
-                <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
-                    <p class="product-text">Producto A</p>
+                    <img class="product-image" src="../assets/image-product-d.jpg" alt="asas">
+                    <p class="product-text">Vela de soja edición Black Style</p>
                     <a class="product-link" href="https://google.com">Compra</a>
                 </div>
             </aside>
