seo added, i think

--- a/html/productos.html
+++ b/html/productos.html
@@ -95,27 +95,27 @@
             </nav>
             <aside class="catalogo-container">
               <div class="product-container">
-                <img class="product-image" src="../assets/image-product-a.jpg" alt="asas">
+                <img class="product-image" src="../assets/image-product-a.jpg" alt="difusor de varillas de 300ml">
                 <p class="product-text">Kit difusor de varillas</p>
                 <a class="product-link" href="https://google.com">Compra</a>
             </div>
             <div class="product-container">
-                <img class="product-image" src="../assets/image-product-b.jpg" alt="asas">
+                <img class="product-image" src="../assets/image-product-b.jpg" alt="vela de soja en una lata de aluminio con textura mate color violaceo">
                 <p class="product-text">Vela de soja en lata premium</p>
                 <a class="product-link" href="https://google.com">Compra</a>
             </div>
             <div class="product-container">
-                <img class="product-image" src="../assets/image-product-c.jpg" alt="asas">
+                <img class="product-image" src="../assets/image-product-c.jpg" alt="vela de soja en envase de vidrio colo ambar de 100ml">
                 <p class="product-text">Vela de soja línea Ambar</p>
                 <a class="product-link" href="https://google.com">Compra</a>
             </div>
                 <div class="product-container">
-                    <img class="product-image" src="../assets/difusor1.jpg" alt="asas">
+                    <img class="product-image" src="../assets/difusor1.jpg" alt="atomizador color gris de 300cc con perfume">
                     <p class="product-text">HomeSpay edición Smoke</p>
                     <a class="product-link" href="https://google.com">Compra</a>
                 </div>
                 <div class="product-container">
-                    <img class="product-image" src="../assets/image-product-d.jpg" alt="asas">
+                    <img class="product-image" src="../assets/image-product-d.jpg" alt="vela en lata de cerámica con textura mate color negro de 300ml">
                     <p class="product-text">Vela de soja edición Black Style</p>
                     <a class="product-link" href="https://google.com">Compra</a>
                 </div>
