--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="Aromia Candles" content="Bienvenido a la tienda virtual de Aromia Candles, vendemos aromatizadores, velas y difusores de auto">
+    <meta name="keywords" content="Candles, Aromia, diffuser, scent, decoration, soycandle">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
     <!--Bootstrap-->
