--- a/html/eventos.html
+++ b/html/eventos.html
@@ -20,10 +20,10 @@
     <header>
         <div class="top-header"> 
             <div class="mi-cuenta-container">
-                <img class="mi-cuenta" src="../assets/my-account-icon.png" alt="cuenta" href="https://google.com">
+                <img class="mi-cuenta" src="../assets/my-account-icon.png" alt="mi cuenta" href="https://google.com">
             </div>
             <div class="nombre-empresa">
-                <img class="logo" src="../assets/logo.png" alt="Logo">
+                <img class="logo" src="../assets/logo.png" alt="Logo de la empresa">
                 <p class="heading">Aromia</p>
             </div>
             <nav class="navbar-1 bg-body-tertiary bg-clr">
@@ -51,7 +51,7 @@
             <h1 class="heading-1">Nos caracterizamos por nuestro servicio de eventos</h1>
                 <section class="explain-container">
                     <div class="img-container">
-                        <img src="../assets/image-event-exp.jpg" alt="imagen">
+                        <img src="../assets/image-event-exp.jpg" alt="imagen de un par de velas">
                     </div>
                     <div class="explain-content">
                         <h2>¿Has tenido espacios vacios en tus decoraciones?</h2>
